--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -27,7 +27,7 @@
         "@trpc/client": "^10.44.1",
         "@trpc/server": "^10.44.1",
         "@types/fs-extra": "^11.0.1",
-        "api": "^6.1.1",
+        "axios": "^1.3.4",
         "dd-trace": "5.2.0",
         "dotenv": "^16.0.3",
         "fs-extra": "^11.1.1",
