--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -17,9 +17,6 @@
     "dependencies": {
         "@nangohq/nango-runner": "^1.0.0",
         "@nangohq/shared": "^0.38.5",
-        "@octokit/plugin-retry": "^6.0.0",
-        "@octokit/plugin-throttling": "^7.0.0",
-        "@octokit/rest": "^20.0.1",
         "@temporalio/activity": "^1.9.1",
         "@temporalio/client": "^1.9.1",
         "@temporalio/worker": "^1.9.1",
@@ -27,7 +24,7 @@
         "@trpc/client": "^10.44.1",
         "@trpc/server": "^10.44.1",
         "@types/fs-extra": "^11.0.1",
-        "api": "^6.1.1",
+        "axios": "^1.3.4",
         "dd-trace": "5.2.0",
         "dotenv": "^16.0.3",
         "fs-extra": "^11.1.1",
