--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,12 +21,13 @@
         "@datadog/datadog-api-client": "^1.16.0",
         "@hapi/boom": "^10.0.1",
         "@nangohq/node": "^0.38.5",
-        "@sentry/node": "^7.37.2",
+        "@sentry/node": "^7.105.0",
         "@temporalio/client": "^1.9.1",
         "amqplib": "^0.10.3",
         "archiver": "^6.0.1",
         "axios": "^1.3.4",
         "braintree": "^3.15.0",
+        "chalk": "^5.3.0",
         "cors": "^2.8.5",
         "dayjs": "^1.11.7",
         "dd-trace": "5.2.0",
@@ -34,7 +35,7 @@
         "exponential-backoff": "^3.1.1",
         "fs-extra": "^11.1.1",
         "human-to-cron": "^0.3.1",
-        "ip": "^1.1.9",
+        "ip": "^2.0.1",
         "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "knex": "^2.3.0",
