fix(dependency): cleanup and upgrade some (#2272)
## Describe your changes

Fixes NAN-1129

- Upgraded vulnerable aws-sdk
- Removed all unused packages 
This should fasten local and CLI install
- Upgraded minor stuff in the UI
- Use `file:..` for types 
not sure why I used the version

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -17,10 +17,11 @@
     "dependencies": {
         "@nangohq/utils": "file:../utils",
         "knex": "3.1.0",
+        "pg": "8.11.3",
         "tarn": "3.0.2"
     },
     "devDependencies": {
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "0.33.0"
     },
     "files": [
