--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,8 +26,8 @@
     },
     "devDependencies": {
         "@nangohq/types": "file:../types",
+        "express": "^4.19.2",
         "ms": "3.0.0-canary.1",
-        "rimraf": "3.0.2",
         "vitest": "0.33.0"
     },
     "files": [
